--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,13 +1,14 @@
-#Defined in the base image
-FROM public.ecr.aws/lambda/python:3.11
-# Set the working directory in the container
-WORKDIR /app
-# Copy the current directory contents into the container at /app
-COPY requirements.txt .
-COPY app.py .
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
-# Expose the port the app runs on
-EXPOSE 80
-# Command to run the app
-CMD ["python", "app.py"]
+FROM public.ecr.aws/lambda/python:3.8
+
+# Copy function code and dependencies
+COPY app.py ${LAMBDA_TASK_ROOT}
+COPY requirements.txt ${LAMBDA_TASK_ROOT}
+
+# Install dependencies
+RUN pip install -r ${LAMBDA_TASK_ROOT}/requirements.txt
+
+# Ensure all files are accessible
+RUN chmod -R o+rX .
+
+# Set the CMD to your handler
+CMD [ "app.lambda_handler" ]
